--- a/index.html
+++ b/index.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>小組知識庫</title>
-</head>
-<body>
-    <div id="login" style="display: block;">
-        <h2>請輸入密碼</h2>
-        <input type="password" id="password">
-        <button onclick="checkPassword()">進入</button>
-    </div>
-    <div id="content" style="display: none;">
-        <h1>歡迎來到我們的資源與會議紀錄</h1>
-        <p>這裡是我們的內容。</p>
-    </div>
-    <script>
-        function checkPassword() {
-            const pwd = document.getElementById("password").value;
-            if (pwd === "UCFG") { // 替換成你的密碼
-                document.getElementById("login").style.display = "none";
-                document.getElementById("content").style.display = "block";
-            } else {
-                alert("密碼錯誤！");
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>第9小組知識庫</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <div id="login">
+            <h2>請輸入密碼</h2>
+            <input type="password" id="password">
+            <button onclick="checkPassword()">進入</button>
+        </div>
+
+        <div id="content" style="display: none;">
+            <h1>歡迎來到</h1>
+            <h1>Unlimited Capital 9th 資源與會議紀錄平台</h1>
+
+            <nav>
+                <a href="#resources">資源清單</a>
+                <a href="#meetings">會議紀錄</a>
+            </nav>
+            <div class="container">
+                <!-- 資源清單 -->
+                <div class="section" id="resources">
+                    <h2>資源清單</h2>
+                    <ul>
+                        <li><a href="https://example.com/tech">技術文章：如何使用 GitHub</a></li>
+                        <li><a href="https://example.com/learn">學習資源：網頁設計基礎</a></li>
+                        <li><a href="https://drive.google.com/your-file">參考文件 PDF</a></li>
+                    </ul>
+                </div>
+                <!-- 會議紀錄 -->
+                <div class="section" id="meetings">
+                    <h2>會議紀錄</h2>
+                    <ul>
+                        <li>2025/02/23: <a href="https://youtube.com/your-video">會議影片</a> - 討論專案進度</li>
+                        <li>2025/02/16: <a href="https://drive.google.com/your-video">會議影片</a> - 資源整理規劃</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- 頁尾 -->
+            <footer>
+                <img src="img/background.png" alt="Icon" class="footer-icon"> <!-- 替換成你的圖標檔案 -->
+                <p>© 2025 我的小組 - 版權所有</p>
+            </footer>
+        </div>
+    
+        <script>
+            window.onload = function() {
+                if (localStorage.getItem('loggedIn') === 'true') {
+                    document.getElementById("login").style.display = "none";
+                    document.getElementById("content").style.display = "block";
+                } else {
+                    document.getElementById("login").style.display = "block";
+                    document.getElementById("content").style.display = "none";
+                }
+            };
+    
+            function checkPassword() {
+                const pwd = document.getElementById("password").value;
+                if (pwd === "UCFG") { // 替換成你的密碼
+                    localStorage.setItem('loggedIn', 'true');
+                    document.getElementById("login").style.display = "none";
+                    document.getElementById("content").style.display = "block";
+                } else {
+                    alert("密碼錯誤！");
+                }
             }
-        }
-    </script>
-</body>
+        </script>
+    </body>
 </html>
